ibv_message_transport/ada_specs/ibv_message_bw_interface_h.ads


   procedure message_transmit_attach_remote (context : tx_message_context_handle);  -- ../ibv_message_bw_interface.h:215
   pragma Import (C, message_transmit_attach_remote, "message_transmit_attach_remote");

   procedure message_transmit_finalise (context : tx_message_context_handle);  -- ../ibv_message_bw_interface.h:216
   pragma Import (C, message_transmit_finalise, "message_transmit_finalise");

   procedure await_all_outstanding_messages_freed (context : tx_message_context_handle);  -- ../ibv_message_bw_interface.h:217
   pragma Import (C, await_all_outstanding_messages_freed, "await_all_outstanding_messages_freed");

   function get_send_buffer_no_wait (context : tx_message_context_handle) return access tx_api_message_buffer;  -- ../ibv_message_bw_interface.h:218
   pragma Import (C, get_send_buffer_no_wait, "get_send_buffer_no_wait");

   function get_send_buffer (context : tx_message_context_handle) return access tx_api_message_buffer;  -- ../ibv_message_bw_interface.h:219
   pragma Import (C, get_send_buffer, "get_send_buffer");

   procedure send_message (api_buffer : access constant tx_api_message_buffer);  -- ../ibv_message_bw_interface.h:220
   pragma Import (C, send_message, "send_message");

   function message_receive_create_local (path_def : access constant communication_path_definition) return rx_message_context_handle;  -- ../ibv_message_bw_interface.h:222
   pragma Import (C, message_receive_create_local, "message_receive_create_local");

   procedure message_receive_attach_remote (context : rx_message_context_handle);  -- ../ibv_message_bw_interface.h:223
   pragma Import (C, message_receive_attach_remote, "message_receive_attach_remote");

   procedure message_receive_finalise (context : rx_message_context_handle);  -- ../ibv_message_bw_interface.h:224
   pragma Import (C, message_receive_finalise, "message_receive_finalise");

   function poll_rx_message (context : rx_message_context_handle) return access rx_api_message_buffer;  -- ../ibv_message_bw_interface.h:225
   pragma Import (C, poll_rx_message, "poll_rx_message");

   function await_message (context : rx_message_context_handle) return access rx_api_message_buffer;  -- ../ibv_message_bw_interface.h:226
   pragma Import (C, await_message, "await_message");

   procedure free_message (api_buffer : access rx_api_message_buffer);  -- ../ibv_message_bw_interface.h:227
   pragma Import (C, free_message, "free_message");

end ibv_message_bw_interface_h;
